0.2.0:
    - Renamed hamoPcapAdd to hamoDeviceAdd.
    - Renamed hamoPcapDispatch to hamoCaptureDispatch.

0.1.2:
    - Whitelist entries are now better validated.

0.1.1:
    - hamoWhitelistLoad now properly ignores empty lines.
    - Changed some error messages in packet.c to warnings.

0.1.0:
    - Renamed capture.{h,c} to hamo.{h,c}.
    - Added the count parameter to hamoPcapDispatch.