@@ -1,3 +1,6 @@
+?.?.?:
+    - Changed the array growth parameters for slower growth.
+
 0.2.0:
     - Renamed hamoPcapAdd to hamoDeviceAdd.
     - Renamed hamoPcapDispatch to hamoCaptureDispatch.
